--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <div class="header">
-        <h1 class="header"> The NASA Expoplanet Searcher </h1>
+        <h1 class=""> The NASA Expoplanet Searcher </h1>
 
         <div class="input">
 
@@ -18,35 +18,35 @@
                 <div class="input__set">
                     <label for="year" class="input__label">Year of Discovery</label>
 
-                    <select name="year" id="year">
+                    <select name="year" id="year" class="input__select">
                         <option value="EMPTY"></option>
                     </select>
                 </div>
                 <div class="input__set">
                     <label for="method" class="input__label">Discovery Method</label>
-                    <select name="method" id="method">
+                    <select name="method" id="method" class="input__select">
                         <option value="EMPTY"></option>
                     </select>
                 </div>
                 <div class="input__set">
                     <label for="facility" class="input__label">Discovery Facility</label>
-                    <select name="facility" id="facility">
+                    <select name="facility" id="facility" class="input__select">
                         <option value="EMPTY"></option>
                     </select>
                 </div>
                 <div class="input__set">
                     <label for="hostName" class="input__label">Host Name</label>
-                    <select name="hostName" id="hostName">
+                    <select name="hostName" id="hostName" class="input__select">
                         <option value="EMPTY"></option>
                     </select>
                 </div>
             </div>
             <div class="input__buttons">
-                <button class="btn" id="search">Search</button>
-                <button class="btn" id="clear">Clear</button>
+                <button class="btn btn--1" id="search">Search</button>
+                <button class="btn btn--2" id="clear">Clear</button>
             </div>
 
-            <span class="input__error hidden">Please enter at least one value</span>
+            <span class="input__error hidden" id="errorMsg">Please enter at least one value</span>
         </div>
     </div>
 
@@ -55,10 +55,10 @@
         <table>
             <thead>
                 <tr>
-                    <th class="data__col">Year</th>
-                    <th class="data__col">Discovery Method</th>
-                    <th class="data__col">Discovery Facility</th>
-                    <th class="data__col">Host Name</th>
+                    <th class="data__col--1">Year</th>
+                    <th class="data__col--2">Discovery Method</th>
+                    <th class="data__col--3">Discovery Facility</th>
+                    <th class="data__col--4">Host Name</th>
 
                 </tr>
             </thead>
