--- a/index.html
+++ b/index.html
@@ -56,19 +56,20 @@
         <table>
             <thead>
                 <tr>
-                    <th class="data__col--1">Year
+                    <th class="data__col data__col--1">Year
                         <span class="arrow up">&#8593;</span>
                         <span class="arrow down">&#8595;</span>
                     </th>
-                    <th class="data__col--2">Discovery Method
+
+                    <th class="data__col data__col--2">Discovery Method
                         <span class="arrow up">&#8593;</span>
                         <span class="arrow down">&#8595;</span>
                     </th>
-                    <th class="data__col--3">Discovery Facility
+                    <th class="data__col data__col--3">Discovery Facility
                         <span class="arrow up">&#8593;</span>
                         <span class="arrow down">&#8595;</span>
                     </th>
-                    <th class="data__col--4">Host Name
+                    <th class="data__col data__col--4">Host Name
                         <span class="arrow up">&#8593;</span>
                         <span class="arrow down">&#8595;</span>
                     </th>
