--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class='loader'></div>
 
     <div class="header loading">
-        <h1 class=""> The NASA Exoplanet Searcher </h1>
+        <div class="h1"> The NASA Exoplanet Searcher </div>
 
         <div class="input hidden">
 
